<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="bert.quizapp.MainActivity">

    <TextView
        android:id="@+id/textView_question"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/placeholder_question"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:labelFor="@id/editText_answer"
            android:text="@string/answer"
            android:visibility="invisible" />


        <Button
            android:id="@+id/button_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/ok" />

        <Button
            android:id="@+id/button_hint"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/hint" />

    </LinearLayout>

</LinearLayout>
